syntax = "proto3";
package video;

import "google/api/annotations.proto";

message GetVideosRequest {
  string query = 1;
}

message GetVideosResponse {
  string query = 1;
}

service VideoService {
  rpc GetVideos(GetVideosRequest) returns (GetVideosResponse) {
    option (google.api.http) = {
      get: "/v1/videos"
    };
  }
}
